# FloatingText

./: README.md  pyproject.toml
src/endstone_floatingtext/: __init__.py  entry.py
